force-app/main/default/objects/RC_Data_Subject_Request__c/RC_Data_Subject_Request__c.object-meta.xml
<CustomObject>
    <label>Data Subject Request</label>
    <nameField>
        <displayFormat>DSR-{00000}</displayFormat>
        <label>DSR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Subject Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>