force-app/main/default/objects/RC_Data_Subject_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privacy Inquiry</fullName>
                <default>true</default>
                <label>Privacy Inquiry</label>
            </value>
            <value>
                <fullName>Correct / Update</fullName>
            </value>
            <value>
                <fullName>Delete My Data</fullName>
            </value>
            <value>
                <fullName>Portability</fullName>
            </value>
            <value>
                <fullName>Stop Processing My Data</fullName>
            </value>
            <value>
                <fullName>Stop Sending Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>