force-app/main/default/objects/RC_Data_Subject_Request__c/fields/Requested_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Role__c</fullName>
    <label>Requested By (Role)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer / User</fullName>
            </value>
            <value>
                <fullName>Employee (Current, Ex, or Contingent Worker)</fullName>
            </value>
            <value>
                <fullName>Job Applicant/Candidate</fullName>
            </value>
            <value>
                <fullName>On behalf of someone / Legal Representative</fullName>
            </value>
            <value>
                <fullName>Partner / Reseller</fullName>
            </value>
            <value>
                <fullName>Supplier / Vendor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>